# JadeWorkflowManager

./: .dagster_conf  .env.development  .gitignore  .gitignore copy  DataBySex.tsx  HealthSurvey.tsx  LICENSE  README copy.md  README.md  env_template.txt  globals.css  package-lock.json  package.json  requirements.txt  setup.py  temp_map.html  workspace.yaml
server/: main.py  pyproject.toml
server/app/: config_manager.py  file_parser.py  file_parsers.py  requirements.txt
server/app/dagster/: dagster_event_listener.py  repo.py  sensors.py  slay_bestie_job_23.py  slayyyy_job_23.py
server/dags/: dagster.yaml
server/routes/: dagster_execute.py  dagster_runs.py  dagster_sensor.py  get_health_check.py  get_list_workflows.py  get_run.py  get_runs.py  get_workflow.py  get_workflows.py  post_new_connection.py  post_new_dag.py  post_new_run.py  post_new_run_WIP.py  post_new_workflow.py  post_new_workflow_step.py  post_runs.py  post_update_workflow.py  post_user_authentication.py  post_workflow_destination.py  workflow_steps.py
server/routes/analytics/: get_analytics.py
server/routes/config/: get_run_config.py  post_new_config.py
server/routes/connections/: post_new_connection.py
server/routes/dags/: get_dag_repo_access.py  post_new_dag.py
server/routes/files/: get_file.py
server/routes/runs/: get_run.py  get_run_activity.sql  get_run_config.py  get_run_status.py  get_runs.py  post_new_run.py  post_run_step_status.py  post_sync_run_status.py  (+3 more)
server/tests/: test_file_parser.py  test_file_parsers.py
server/workflow_dags_pending/: workflow_23.py  workflow_25.py
(+148 files in other folders)
